force-app/main/default/objects/Oportunidad__c/fields/Departamento_RO__c.field-meta.xml
<CustomField>
    <fullName>Departamento_RO__c</fullName>
    <description>Dato que viene de Smart BPM Offer</description>
    <label>Departamento RO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>