force-app/main/default/objects/Oportunidad__c/fields/Desglose_importes__c.field-meta.xml
<CustomField>
    <fullName>Desglose_importes__c</fullName>
    <label>Desglose importes</label>
    <length>2</length>
    <type>Text</type>
</CustomField>