force-app/main/default/objects/Oportunidad__c/fields/Detalle_modo_de_presentaci_n__c.field-meta.xml
<CustomField>
    <fullName>Detalle_modo_de_presentaci_n__c</fullName>
    <label>Detalle modo de presentación</label>
    <length>40</length>
    <type>Text</type>
</CustomField>