force-app/main/default/objects/Oportunidad__c/fields/Direccion_Financiera_Corporativa__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Financiera_Corporativa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dirección Financiera Corporativa</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades3</relationshipName>
    <type>Lookup</type>
</CustomField>