force-app/main/default/objects/Oportunidad__c/fields/Director_de_Mercado__c.field-meta.xml
<CustomField>
    <fullName>Director_de_Mercado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director de Mercado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades5</relationshipName>
    <type>Lookup</type>
</CustomField>