force-app/main/default/objects/Oportunidad__c/fields/Director_Internacional__c.field-meta.xml
<CustomField>
    <fullName>Director_Internacional__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Internacional</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades6_del</relationshipName>
    <type>Lookup</type>
</CustomField>