force-app/main/default/objects/Oportunidad__c/fields/Director_Pais__c.field-meta.xml
<CustomField>
    <fullName>Director_Pais__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director País</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Oportunidades9_del</relationshipName>
    <type>Lookup</type>
</CustomField>