force-app/main/default/objects/Oportunidad__c/fields/Division_literal__c.field-meta.xml
<CustomField>
    <fullName>Division_literal__c</fullName>
    <formula>CASE(DivisionPicklist__c,
&apos;60029503&apos;,&apos;AVIATION&apos;,
&apos;60029514&apos;,&apos;BFS&apos;,
&apos;60029481&apos;,&apos;BPO UTILITIES&apos;,
&apos;60029509&apos;,&apos;BUILDING EMEA &amp; ASIA&apos;,
&apos;60029508&apos;,&apos;BUILDING LATAM&apos;,
&apos;60029510&apos;,&apos;BUILDING SPAIN&apos;,
&apos;60029513&apos;,&apos;CONSUMER &amp; BUSINESS SERVICES&apos;,
&apos;60049219&apos;,&apos;DIGITAL ADMINISTRATION&apos;,
&apos;60029428&apos;,&apos;ENEL&apos;,
&apos;60029475&apos;,&apos;ENERGY&apos;,
&apos;60029489&apos;,&apos;ENVIRONMENT&apos;,
&apos;60048556&apos;,&apos;HEALTH&apos;,
&apos;60029488&apos;,&apos;HYDRAULIC WORKS&apos;,
&apos;60048557&apos;,&apos;IBERDROLA&apos;,
&apos;60048559&apos;,&apos;INDUSTRY&apos;,
&apos;60029500&apos;,&apos;INFRA. SUPERVISIONS&apos;,
&apos;60030704&apos;,&apos;INNOVATION&apos;,
&apos;60031603&apos;,&apos;INSURANCE&apos;,
&apos;60029416&apos;,&apos;LAND MANAGEMENT&apos;,
&apos;60050065&apos;,&apos;MARINE &amp; COASTALS&apos;,
&apos;60050044&apos;,&apos;MICROSOFT&apos;,
&apos;60029483&apos;,&apos;OIL &amp; GAS&apos;,
&apos;60048560&apos;,&apos;ONCE&apos;,
&apos;60029484&apos;,&apos;PROCESS PLANTS&apos;,
&apos;60029499&apos;,&apos;RAILWAY/METRO&apos;,
&apos;60029501&apos;,&apos;RAILWAY SYSTEMS&apos;,
&apos;60055372&apos;,&apos;REAL ESTATE SPAIN&apos;,
&apos;60048558&apos;,&apos;RESOURCES&apos;,
&apos;60029498&apos;,&apos;ROADS&apos;,
&apos;60033576&apos;,&apos;TMT&apos;,
&apos;60029502&apos;,&apos;TRANSPORT. CATALONIA&apos;,
&apos;60029496&apos;,&apos;TRANSPORT EMEA &amp; ASIA&apos;,
&apos;60029495&apos;,&apos;TRANSPORT LATAM&apos;,
&apos;60029478&apos;,&apos;UTILITIES ESPAÑA&apos;,
&apos;60029480&apos;,&apos;UTILITIES LATAM&apos;,
&apos;60035586&apos;,&apos;V-LATAM&apos;,
&apos;60029486&apos;,&apos;WATER &amp; ENVIRON. EMEA &amp; ASIA&apos;,
&apos;60029485&apos;,&apos;WATER &amp; ENVIRONM. LATAM&apos;,
&apos;60029492&apos;,&apos;WATER CATALONIA&apos;,
&apos;60029490&apos;,&apos;WATER SUPERVISIONS&apos;,
&apos;60035584&apos;,&apos;SMART FACTORIES&apos;,
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>División Literal</label>
    <type>Text</type>
</CustomField>