force-app/main/default/objects/Oportunidad__c/fields/Division_SAP_Ingenieria__c.field-meta.xml
<CustomField>
    <fullName>Division_SAP_Ingenieria__c</fullName>
    <label>División SAP Ingeniería</label>
    <length>255</length>
    <type>Text</type>
</CustomField>