force-app/main/default/objects/Oportunidad__c/fields/DivisionReadOnly__c.field-meta.xml
<CustomField>
    <fullName>DivisionReadOnly__c</fullName>
    <formula>TEXT(Division__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Division of the previous organization (31/12/2021)</inlineHelpText>
    <label>División</label>
    <type>Text</type>
</CustomField>