force-app/main/default/objects/Oportunidad__c/fields/Elemento_PEP__c.field-meta.xml
<CustomField>
    <fullName>Elemento_PEP__c</fullName>
    <label>Elemento PEP</label>
    <type>TextArea</type>
</CustomField>