force-app/main/default/objects/Oportunidad__c/fields/Emplazamiento__c.field-meta.xml
<CustomField>
    <fullName>Emplazamiento__c</fullName>
    <label>Emplazamiento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>