force-app/main/default/objects/Oportunidad__c/fields/Enviado_la_oferta_a_soporte__c.field-meta.xml
<CustomField>
    <fullName>Enviado_la_oferta_a_soporte__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Se ha enviado la oferta presentada a Soporte Ofertas o se ha subido a Alejandría</description>
    <inlineHelpText>Check this field if the bid has been sent to Bid Support / it has been uploaded to Alejandría</inlineHelpText>
    <label>Enviado la oferta a soporte / Alejandría</label>
    <type>Checkbox</type>
</CustomField>