force-app/main/default/objects/Oportunidad__c/fields/Enviar_SUPER__c.field-meta.xml
<CustomField>
    <fullName>Enviar_SUPER__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Campo a usar para discriminar en el PN hacia SUPER</description>
    <label>Enviar SUPER</label>
    <type>Checkbox</type>
</CustomField>