force-app/main/default/objects/Oportunidad__c/fields/Estado_de_Cierre__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Cierre__c</fullName>
    <inlineHelpText>Close the opportunity when you become aware of the outcome. If awarded the bid, we suggest closing it once the PSP (Project Structure Plan) has been opened.</inlineHelpText>
    <label>Estado de Cierre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perdida</fullName>
            </value>
            <value>
                <fullName>Anulada</fullName>
            </value>
            <value>
                <fullName>No Presentada</fullName>
            </value>
            <value>
                <fullName>Contratada</fullName>
            </value>
            <value>
                <fullName>Adjudicada</fullName>
                <isActive>false</isActive>
                <label>Adjudicada</label>
            </value>
            <value>
                <fullName>Ganada</fullName>
                <isActive>false</isActive>
                <label>Ganada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>