force-app/main/default/objects/Oportunidad__c/fields/Estado_de_Cierre_SME__c.field-meta.xml
<CustomField>
    <fullName>Estado_de_Cierre_SME__c</fullName>
    <description>Cierre la oportunidad cuando sepa el desenlace.</description>
    <label>Estado de cierre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perdida</fullName>
            </value>
            <value>
                <fullName>Anulada</fullName>
            </value>
            <value>
                <fullName>No Presentada</fullName>
            </value>
            <value>
                <fullName>Contratada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>