force-app/main/default/objects/Oportunidad__c/fields/Estado_oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Estado_oportunidad__c</fullName>
    <inlineHelpText>Este campo se informará cuando la etapa de la oportunidad vaya a pasar a Cerrada.</inlineHelpText>
    <label>Estado oportunidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suspect</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>