force-app/main/default/objects/Oportunidad__c/fields/Estado_Smart_BPM_Offer__c.field-meta.xml
<CustomField>
    <fullName>Estado_Smart_BPM_Offer__c</fullName>
    <label>Estado Smart BPM Offer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>