force-app/main/default/objects/Oportunidad__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <label>Etapa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Captación</fullName>
            </value>
            <value>
                <fullName>Cualificación</fullName>
            </value>
            <value>
                <fullName>Demostrando</fullName>
            </value>
            <value>
                <fullName>Oferta</fullName>
            </value>
            <value>
                <fullName>Cerrada</fullName>
                <label>Presentada (negociación y cierre)</label>
            </value>
            <value>
                <fullName>Abierta</fullName>
                <isActive>false</isActive>
                <label>Abierta</label>
            </value>
            <value>
                <fullName>Anulada</fullName>
                <isActive>false</isActive>
                <label>Anulada</label>
            </value>
            <value>
                <fullName>Aprobada</fullName>
                <isActive>false</isActive>
                <label>Aprobada</label>
            </value>
            <value>
                <fullName>Aprobada QA</fullName>
                <isActive>false</isActive>
                <label>Aprobado pdte Presentar</label>
            </value>
            <value>
                <fullName>Preparando QA</fullName>
                <isActive>false</isActive>
                <label>En preparación</label>
            </value>
            <value>
                <fullName>Ganada</fullName>
                <isActive>false</isActive>
                <label>Ganada</label>
            </value>
            <value>
                <fullName>Pedido Código Oferta</fullName>
                <isActive>false</isActive>
                <label>Pedido Código Oferta</label>
            </value>
            <value>
                <fullName>Pedir Código Oferta</fullName>
                <isActive>false</isActive>
                <label>Pedir Código Oferta</label>
            </value>
            <value>
                <fullName>Pendiente QA</fullName>
                <isActive>false</isActive>
                <label>Pendiente QA</label>
            </value>
            <value>
                <fullName>Perdida</fullName>
                <isActive>false</isActive>
                <label>Perdida</label>
            </value>
            <value>
                <fullName>Presentada</fullName>
                <isActive>false</isActive>
                <label>Presentada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>