force-app/main/default/objects/Oportunidad__c/fields/Etapa_Fase_aux__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Fase_aux__c</fullName>
    <label>Etapa Fase ELIMINAR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Captación</fullName>
            </value>
            <value>
                <fullName>Cualificación</fullName>
            </value>
            <value>
                <fullName>Demostrando</fullName>
            </value>
            <value>
                <fullName>Oferta</fullName>
            </value>
            <value>
                <fullName>Cierre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>