force-app/main/default/objects/Oportunidad__c/fields/Etapa_Smart_BPM_Offer__c.field-meta.xml
<CustomField>
    <fullName>Etapa_Smart_BPM_Offer__c</fullName>
    <label>Etapa Smart BPM Offer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>