force-app/main/default/objects/Oportunidad__c/fields/Fase__c.field-meta.xml
<CustomField>
    <fullName>Fase__c</fullName>
    <label>Fase</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Etapa_Fase__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suspect</fullName>
            </value>
            <value>
                <fullName>Suspect-TL</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Lead NO Cualifica</fullName>
            </value>
            <value>
                <fullName>OP-Pediente Demo</fullName>
                <label>OP-Pendiente Demo</label>
            </value>
            <value>
                <fullName>OP-Negociando condiciones de cierre</fullName>
            </value>
            <value>
                <fullName>OP-Pendiente de recibir pedido</fullName>
            </value>
            <value>
                <fullName>OP-Pre Ganada</fullName>
            </value>
            <value>
                <fullName>OP-Demostrando</fullName>
            </value>
            <value>
                <fullName>OP-Perdida</fullName>
            </value>
            <value>
                <fullName>OP-Ofertando CON competidores y NO favoritos</fullName>
            </value>
            <value>
                <fullName>OP-Ofertando CON competidores y favoritos</fullName>
            </value>
            <value>
                <fullName>OP-Ofertando SIN competidores</fullName>
            </value>
            <value>
                <fullName>OP-Ganada</fullName>
            </value>
            <value>
                <fullName>Ninguno</fullName>
            </value>
            <value>
                <fullName>Suspect Proviene de Lead/OP aplazada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>