force-app/main/default/objects/Oportunidad__c/fields/Fecha_firma_contrato__c.field-meta.xml
<CustomField>
    <fullName>Fecha_firma_contrato__c</fullName>
    <description>Fecha en la que se firma el contrato con el cliente</description>
    <inlineHelpText>Fecha en la que se firma el contrato con el cliente</inlineHelpText>
    <label>Fecha firma contrato</label>
    <type>Date</type>
</CustomField>