force-app/main/default/objects/Oportunidad__c/fields/Fecha_limite_de_presentacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_limite_de_presentacion__c</fullName>
    <description>Fecha de presentación de la oferta</description>
    <inlineHelpText>Bid submittal limit date, ACTUAL date if it has already been submitted</inlineHelpText>
    <label>Fecha presentación</label>
    <type>Date</type>
</CustomField>