force-app/main/default/objects/Oportunidad__c/fields/Fecha_Oportunity__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Oportunity__c</fullName>
    <description>Fecha en la que la oportunidad para la fecha de oportunidad a estado Oportunity</description>
    <label>Fecha Oportunity</label>
    <type>Date</type>
</CustomField>