force-app/main/default/objects/Oportunidad__c/fields/Fecha_SP__c.field-meta.xml
<CustomField>
    <fullName>Fecha_SP__c</fullName>
    <label>Fecha Siguiente Paso</label>
    <type>Date</type>
</CustomField>