force-app/main/default/objects/Oportunidad__c/fields/FECULTREVISIONQ0__c.field-meta.xml
<CustomField>
    <fullName>FECULTREVISIONQ0__c</fullName>
    <label>Fecha última revisión Q0</label>
    <type>Date</type>
</CustomField>