force-app/main/default/objects/Oportunidad__c/fields/FICEPI_Business_Developer__c.field-meta.xml
<CustomField>
    <fullName>FICEPI_Business_Developer__c</fullName>
    <formula>BusinessDeveloper__r.FICEPI__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FICEPI Business Developer</label>
    <type>Text</type>
</CustomField>